<resources>
    <string name="app_name" translatable="false">NUM</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="ad_mob_app_id" translatable="false">ca-app-pub-6822678516999860~3405197048</string>
    <string name="ad_mob_test_app_id" translatable="false">ca-app-pub-6822678516999860~3405197048</string>
    <string name="ad_mob_video_id" translatable="false">ca-app-pub-6822678516999860/4520020827</string>
    <string name="ad_mob_test_video_id" translatable="false">ca-app-pub-3940256099942544/5224354917</string>
    <string name="num_description">Num helps your phone identify who is calling you</string>
    <string name="continue_str">Continue</string>
    <string name="privacy_policy">By clicking Continue, you accept the Terms of Service</string>
    <string name="subscription_not_active">Subscription is not active!</string>
    <string name="select_position">Drag to the location where the information window will be displayed</string>
    <string name="data_call">Data displayed on call</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="avatar">Avatar</string>
    <string name="country">Country</string>
    <string name="group">Group</string>
    <string name="region">Region</string>
    <string name="operator">Operator</string>
    <string name="language">Language</string>
    <string name="position">Position</string>
    <string name="settings">Settings</string>
    <string name="select_language">Choose language</string>
    <string name="ads_dialog_message">You may pay for using the app simply watching ads. Would you like to try?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="address">Address</string>
    <string name="profile">Profile</string>
    <string name="profile_title_label">Your profile</string>
    <string name="profile_save_button_label">Save</string>
    <string name="profile_edit_button_label">Edit</string>
    <string name="input_your_phone">Enter your phone number</string>
    <string name="sign_in">Sign in</string>
    <string name="send_sms_again">Resend after %d sec</string>
    <string name="resend_code_now">Resend code</string>
    <string name="input_code_from_sms">Enter the code from SMS</string>
    <string name="change_phone">Change phone</string>
    <string name="invalid_phone">Invalid phone number</string>
    <string name="cancel">Cancel</string>
    <string name="time_remaining">%d seconds remaining</string>
    <string name="delete_profile">Delete profile</string>
</resources>
