<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/data_call"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="4dp"
        android:background="@android:color/darker_gray" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/name_switch"
                    style="@style/myswitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/category_switch"
                    style="@style/myswitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/category" />
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/avatar_switch"
                    style="@style/myswitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/avatar" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/country_switch"
                    style="@style/myswitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/country" />
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/namegroup_switch"
                    style="@style/myswitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/group" />
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/region_switch"
                    style="@style/myswitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/region" />
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/operator_switch"
                    style="@style/myswitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/operator" />
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>