<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileFragment">


    <ImageView
        android:id="@+id/avatar_image_view"
        android:layout_width="141dp"
        android:layout_height="149dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_profile" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar_image_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="5dp">

                <EditText
                    android:id="@+id/name_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    tools:layout_editor_absoluteX="112dp"
                    tools:layout_editor_absoluteY="153dp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="4dp">

                <AutoCompleteTextView
                    android:id="@+id/country_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:completionHint="@string/country"
                    android:hint="@string/country" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="4dp">

                <AutoCompleteTextView
                    android:id="@+id/region_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/region" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="4dp">

                <EditText
                    android:id="@+id/address_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/address"
                    android:inputType="textPersonName" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="4dp">

                <AutoCompleteTextView
                    android:id="@+id/operator_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/operator" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="4dp">

                <AutoCompleteTextView
                    android:id="@+id/category_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/category" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="4dp">

                <AutoCompleteTextView
                    android:id="@+id/group_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/group" />
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/profile_title_label"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/profile_cancel_btn"
        app:layout_constraintStart_toStartOf="@+id/profile_save_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/phone_number_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="+7(385)242-23-75"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/profile_cancel_btn"
        app:layout_constraintStart_toStartOf="@+id/profile_save_btn"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/profile_edit_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="13dp"
        android:layout_marginStart="8dp"
        android:text="@string/profile_edit_button_label"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/avatar_image_view" />

    <Button
        android:id="@+id/profile_save_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/profile_save_button_label"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/profile_edit_btn"
        app:layout_constraintStart_toStartOf="@+id/profile_edit_btn" />

    <Button
        android:id="@+id/profile_cancel_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@android:string/cancel"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/profile_edit_btn"
        app:layout_constraintEnd_toEndOf="@+id/profile_edit_btn"
        app:layout_constraintStart_toEndOf="@+id/profile_save_btn" />

</android.support.constraint.ConstraintLayout>