<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:weightSum="1"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/num_description"
        android:gravity="center|bottom"
        android:lines="3"
        android:minLines="3"
        android:textSize="16sp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textStyle="bold"
        android:layout_above="@+id/tel"
        android:layout_weight="0.15" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.6">
        <ImageView
            android:id="@+id/num_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>
        <ImageView
            android:id="@+id/tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>
    
    <android.support.v7.widget.CardView
        android:id="@+id/accept_privacy"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:layout_below="@+id/tel"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_str"
            android:layout_margin="4dp"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="@android:color/black" />
    </android.support.v7.widget.CardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:autoLink="web"
        android:gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textColor="@android:color/black"
        android:text="@string/privacy_policy"/>
</LinearLayout>