<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_profile_synd_phone_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <com.vallsoft.num.ui.masked_edit_text.MaskedEditText
        android:id="@+id/fragment_profile_sync_phone_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="XXXXXXXXXXXX"
        android:inputType="phone|textNoSuggestions"
        android:maxEms="10"
        android:textSize="32sp"
        app:allowed_chars="0123456789"
        app:keep_hint="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:mask="+## (###) ###-##-##" />

    <TextView
        android:id="@+id/fragment_profile_phone_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:text="@string/input_your_phone"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/fragment_profile_sync_phone_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <android.support.v7.widget.CardView
        android:id="@+id/fragment_profile_phone_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:background="?selectableItemBackground"
        app:cardCornerRadius="8dp"
        app:contentPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_profile_sync_phone_code">

        <TextView
            android:id="@+id/fragment_phone_sync_sign_in_btn_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_login"
            android:gravity="center"
            android:text="@string/sign_in"
            android:drawablePadding="8dp"
            android:textColor="@android:color/background_dark" />

    </android.support.v7.widget.CardView>

    <EditText
        android:id="@+id/fragment_profile_sync_phone_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="6"
        android:gravity="center"
        android:hint="------"
        android:inputType="text|textNoSuggestions"
        android:maxEms="6"
        android:textSize="32sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_profile_sync_phone_input" />

    <TextView
        android:id="@+id/fragment_profile_resend_code_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:paddingBottom="4dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="4dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_profile_sync_back_to_phone"
        tools:text="Отправить еще раз через 5 сек"
        tools:visibility="visible" />

    <android.support.v7.widget.CardView
        android:id="@+id/fragment_profile_sync_back_to_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="8dp"
        app:contentPadding="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_profile_phone_btn"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_phone"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:textColor="@android:color/background_dark"
            android:text="@string/change_phone"
           />
    </android.support.v7.widget.CardView>

    <ImageView
        android:id="@+id/fragment_profile_sync_back_to_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />
</android.support.constraint.ConstraintLayout>